--- a/src/views/components/calendar-small.njk
+++ b/src/views/components/calendar-small.njk
@@ -58,13 +58,13 @@
                   </div>
                   <div class="col-auto text-center">
                     <i class="fas fa-angle-up time-arrow" id="hourIncrement"></i>
-                    <input class="form-control time-form" placeholder="12" id="hourForm">
+                    <input class="form-control time-form" placeholder="12" id="hourForm" disabled>
                     <i class="fas fa-angle-down time-arrow" id="hourDecrement"></i>
                   </div>
 
                   <div class="col-auto text-center">
                     <i class="fas fa-angle-up time-arrow" id="minuteIncrement"></i>
-                    <input class="form-control time-form" placeholder="00" id="minuteForm">
+                    <input class="form-control time-form" placeholder="00" id="minuteForm" disabled>
                     <i class="fas fa-angle-down time-arrow" id="minuteDecrement"></i>
                   </div>
 
