Add dates to news

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -28,7 +28,8 @@
               <div class="col-3 pl-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=3&h=4" class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-3">
+              <div class="col-9 pl-0 pt-1">
+                <span class="date">Jan 11-15, 2020</span>
                 <h5 class="header">Naveen presents at International Plant Animal Genome Conference</h5>
                 <p class="desc">
                   Naveen presented a poster on citSatdb and gave an oral presentation on GreeningDB.
@@ -41,7 +42,8 @@
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newadmin1">
             <div class="row pl-0">
-              <div class="col-9 pt-3">
+              <div class="col-9 pt-1">
+                <span class="date">Mar 21, 2020</span>
                 <h5 class="header">New HPC Admin: Shelby McCowan</h5>
                 <p class="desc">
                   Shelby McCowan has joined the team and will be taking over as the new HPC Admin.
@@ -67,7 +69,8 @@
               <div class="col-3 pl-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=5&h=6" class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-3">
+              <div class="col-9 pl-0 pt-1">
+                <span class="date">Dec 1, 2019</span>
                 <h5 class="header">deepHPI is Online!</h5>
                 <p class="desc">
                   To bolster and accelerate research on infectious disease, we have implemented deepHPI.
@@ -85,7 +88,8 @@
                 <img src="https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg?la=en&h=286&w=300&mw=300&hash=CE04AC2D6DB0A5068DBB7D0CCEF7636A1C66C738"
                   class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-3">
+              <div class="col-9 pl-0 pt-1">
+                <span class="date">March 26, 2020</span>
                 <h5 class="header">COVID-19 Tracker</h5>
                 <p class="desc">
                   KAABiL now has a dashboard for tracking global COVID-19 data
