--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -4,3 +4,4 @@
 @import './components/multi-carousel';
 @import './components/conf-card';
 @import './components/calendar';
+@import './components/event';
