--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -13,7 +13,8 @@
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'home', link: '/'}, {name: 'events', link: '/events'}]) }}
 
-  <section class="sabbi-section stage_events_post">
+  {% from "components/event-link.njk" import eventLink %}
+  <section>
       <div class="container">
         {% from './_functions.njk' import selector, activeCheck %}
         <section class="row justify-content-center my-5">
@@ -22,197 +23,116 @@
           {{ selector("2018") }}
           {{ selector("2013") }}
         </section>
-          <div class="events_post-sagment tabcontent {{ activeCheck('2020') }}" id="20">
-              <h4 class="sagment-title">2020</h4>
-              <div class="row">
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/pag2020" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                  style=""
-                                      src="assets/img/events/pag2020/IMG_20200113_151858.jpg"
-                                      alt="thompson">
-                                  <figcaption class="event_text">
-                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">
-                                        Plant & Animal Genome Conference
-                                      </h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
-                                      San Diego, CA</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">11-15<sup>th</sup>
-                                      Jan 2020</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-              </div>
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent {{ activeCheck('2019') }}" id="19">
-              <h4 class="sagment-title">2019</h4>
-              <div class="row">
-                <div class="col-sm-6">
-                    <article class="sabbi-events-item">
-                        <a href="/events/pag" class="sabbi-events-link">
-                            <figure class="img-hover-zoom">
-                                <img class="sabbi-events-img img-responsive lab_event"
-                                style=""
-                                    src="assets/img/events/PAG-2019/g2.jpg"
-                                    alt="thompson">
-                                <figcaption class="event_text">
-                                    <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
-                                    </h2>
-                                </figcaption>
-                            </figure>
-                        </a>
-                        <div class="events-item-meta">
-                            <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
-                                    San Diego, CA</span></div>
-                            <div class="events-date"><i class="ion-calendar"></i><span class="text">12-16<sup>th</sup>
-                                    Jan 2019</span></div>
-                        </div>
-                    </article><!-- /.sabbi-events-item -->
-                </div>
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/psc" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG"
-                                      alt="thompson">
-                                  <figcaption class="event_text">
-                                      <h2 class="sabbi-events-title font-md__x " style="color: black;">PSC Showcase
-                                      </h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">4820 Old Main
-                                      Hill, Logan, UT</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">23<sup>rd</sup>
-                                      March 2019</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/cricket" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/Cricket_2019/7d2e764e.JPG"
-                                      alt="thompson">
-                                  <figcaption class="event_text">
-                                      <h2 class="sabbi-events-title font-md__x " style="color: black;">Cricket in Utah
-                                      </h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">6252 W 6200 S,
-                                     Kearns, UT</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">13<sup>th</sup>
-                                      July 2019</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/winter" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/USU_winter/IMG_1201.JPG" alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">Utah State
-                                          University Winter</h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">4700 Old Main
-                                      Hiil, Logan, UT</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">1<sup>st</sup>
-                                      December 2019</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-              </div>
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent {{ activeCheck('2018') }}" id="18">
-              <h4 class="sagment-title">2018</h4>
-              <div class="row">
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/rocky" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/Rocky_2018/IMG_1335.JPG" alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">Rocky
-                                          Bioinformatics Conference</h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">130 Wood Road,
-                                      Snowmass Village, CO</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">5<sup>th</sup> -
-                                      7<sup>th</sup> December 2018</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/hsing" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/NCHU-2018/IMG_5118.JPG" alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">Visit to
-                                          National Chung Hsing University</h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">145 Xingda Road,
-                                      S District, Taichung City, Taiwan</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">2<sup>nd</sup> -
-                                      9<sup>th</sup> March 2018</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-              </div>
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent {{ activeCheck('2013') }}" id="13">
-              <h4 class="sagment-title">2013</h4>
-              <div class="row">
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/osucup" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                      src="assets/img/events/OSU-President's Cup Dec2013//11310703416_5d39f89a49.png"
-                                      alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">Won President's
-                                          Cup at OSU</h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">246 Noble
-                                      Research Center, Stillwater, OK</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">10<sup>th</sup>
-                                      December 2013</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
-
-              </div>
-          </div><!-- /.events_post-sagment -->
+        <section class="{{ activeCheck('2020') }}" id="20">
+          <h4 class="kbl-heading text-center">2020</h4>
+          <div class="row justify-content-center">
+            <div class="col-sm-6">
+              {% set pag2020 = {
+                  link: '/event/pag2020',
+                  title: 'Plant & Animal Genome Conference',
+                  location: '500 Hotel Circle N, San Diego, CA',
+                  date: 'Jan 11-15, 2020',
+                  img: '/image/raw/bioinfo/events/IMG_20200113_151858.jpg'
+                }
+              %}
+              {{ eventLink(pag2020) }}
+            </div>
+          </div>
+        </section>
+        <section class="{{ activeCheck('2019') }}" id="19">
+          <h4 class="kbl-heading text-center">2019</h4>
+          <div class="row">
+            <div class="col-sm-6">
+              {% set pag = {
+                  link: '/event/pag',
+                  title: 'Plant & Animal Genome Conference',
+                  location: '500 Hotel Circle N, San Diego, CA',
+                  date: 'Jan 12-16, 2019',
+                  img: '/image/raw/bioinfo/events/PAG-2019/g2.jpg'
+                }
+              %}
+              {{ eventLink(pag) }}
+            </div>
+            <div class="col-sm-6">
+              {% set psc = {
+                  link: '/event/psc',
+                  title: 'PSC Showcase',
+                  location: '4820 Old Main Hill, Logan, UT',
+                  date: 'Mar 23, 2019',
+                  img: '/image/raw/bioinfo/events/PSCshowcase_2019/d791cf15-ac89-4759-97d8-239827926698.JPG'
+                }
+              %}
+              {{ eventLink(psc) }}
+            </div>
+            <div class="col-sm-6">
+              {% set cricket = {
+                  link: '/event/cricket',
+                  title: 'Cricket in Utah',
+                  location: '6252 W 6200 S, Kearns, UT',
+                  date: 'Jul 13, 2019',
+                  img: '/image/raw/bioinfo/events/Cricket_2019/7d2e764e.JPG'
+                }
+              %}
+              {{ eventLink(cricket) }}
+            </div>
+            <div class="col-sm-6">
+              {% set winter = {
+                  link: '/event/winter',
+                  title: 'Utah State University Winter',
+                  location: '4700 Old Main Hill, Logan, UT',
+                  date: 'Dec 1, 2019',
+                  img: '/image/raw/bioinfo/events/USU_winter/IMG_1201.JPG'
+                }
+              %}
+              {{ eventLink(winter) }}
+            </div>
+          </div>
+        </section>
+        <section class="{{ activeCheck('2018') }}" id="18">
+          <h4 class="kbl-heading text-center">2018</h4>
+          <div class="row">
+            <div class="col-sm-6">
+              {% set rocky = {
+                  link: '/event/rocky',
+                  title: 'Rocky Bioinformatics Conference',
+                  location: '130 Wood Road, Snowmass Village, CO',
+                  date: 'Dec 5-7, 2018',
+                  img: '/image/raw/bioinfo/events/Rocky_2018/IMG_1335.JPG'
+                }
+              %}
+              {{ eventLink(rocky) }}
+            </div>
+            <div class="col-sm-6">
+              {% set hsing = {
+                  link: '/event/hsing',
+                  title: 'Visit to National Chung Hsing University',
+                  location: '145 Xingda Road, S District, Taichung City, Taiwan',
+                  date: 'Mar 2-9, 2018',
+                  img: '/image/raw/bioinfo/events/NCHU-2018/IMG_5118.JPG'
+                }
+              %}
+              {{ eventLink(hsing) }}
+            </div>
+          </div>
+        </section>
+        <section class="{{ activeCheck('2013') }}" id="13">
+          <h4 class="kbl-heading text-center">2013</h4>
+          <div class="row">
+            <div class="col-sm-6">
+              {% set osucup = {
+                  link: '/event/osucup',
+                  title: 'Won President\'s Cup at OSU',
+                  location: '246 Noble Research Center, Stillwater, OK',
+                  date: 'Dec 10, 2013',
+                  img: '/image/raw/bioinfo/events/osupres/11310703416_5d39f89a49.png'
+                }
+              %}
+              {{ eventLink(osucup) }}
+            </div>
+          </div>
+        </section>
       </div>
-  </section><!-- /.stage_events_post -->
+  </section>
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
