--- a/src/scss/components/_event.scss
+++ b/src/scss/components/_event.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     border: 1px solid var(--color-secondary-very-light);
     transition: var(--time-mid);
+    height: 380px;
 
     &:hover {
       border-color: var(--color-primary-light);
