--- a/src/views/components/event-link.njk
+++ b/src/views/components/event-link.njk
@@ -1,5 +1,5 @@
 {% macro eventLink(event) %}
-  <article class="container-fluid kbl-event-link">
+  <article class="container-fluid kbl-event-link my-2">
     <a href="{{ event.link }}">
       <div class="img-container">
         <img class="img-fluid" src="{{ RaikouServer }}{{ event.img }}">
