--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -48,7 +48,7 @@
                 title: 'Plant & Animal Genome Conference',
                 location: '500 Hotel Circle N, San Diego, CA',
                 date: 'Jan 12-16, 2019',
-                img: '/image/raw/bioinfo/events/PAG-2019/g2.jpg?'
+                img: '/image/raw/bioinfo/events/PAG-2019/g2.jpg'
               }
             %}
             {{ eventLink(pag) }}
