--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -2,30 +2,41 @@
     <div class="container mb-5">
         <div class="row mb-5 justify-content-center">
             <div class="col-10 col-sm-9 col-md-6 col-lg-4 col-xl-4">
-                <article class="sabbi-thumlinepost-card solitude-bg__x">
-                    <figure class="sabbi-thumlinepost-card-figure">
-                        <img alt="" class="img-responsive img-thumpost img-round" style="width: 557px; height: 360px;" src="assets/img/profile/RK_2.jpg">
-                    </figure>
-                    <h2 class="entry-title kbl-text" style="font-size: 15px;">Dr. Rakesh Kaundal</h2>
-                    <div class="card_st_fix kbl-text">Rakesh is an Assistant Professor of Bioinformatics in the Department of Plants, Soils, and Climate at Utah State University,
-                    and is the Director of Bioinformatics Facility at the Center for Integrated BioSystems, USU. He also...
-                        <ul class="pfofile-social list-unstyled list-inline">
-                            <li class="d-inline">
-                              <a target="_blank" href="https://orcid.org/0000-0001-8683-1240">
-                                <img src="assets/img/profile/social/gs.png" class="img-fluid">
-                              </a>
-                            </li>
-                            <li class="d-inline">
-                              <a target="_blank" href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao">
-                                <img src="assets/img/profile/social/id.png" class="img-fluid">
-                              </a>
-                            </li>
-                        </ul>
-                        <div class="action-wrap" style="padding-bottom: 15px;">
-                          <a href="/people/rakesh" class="kbl-link thicc">Read More</a>
-                        </div>
-                    </div>
-                </article>
+              <article class="kbl-person-card-container auto">
+                <div class="kbl-person-card rakesh-card">
+                  <figure>
+                    <img class="w-100 mb-2 img-round" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg">
+                    <figcaption class="pb-2 px-3">
+                      <div clas="title-wrapper">
+                        <h5>Dr. Rakesh Kaundal</h5>
+                        <p class="my-1">
+                          Rakesh is an Assistant Professor of Bioinformatics in the Department of Plants, Soils, and Climate at Utah State University,
+                          and is the Director of Bioinformatics Facility at the Center for Integrated BioSystems, USU.
+                        </p>
+                        <h6>
+                          <a href="http://bioinfo.usu.edu/people/rakesh" class="kbl-link">Read More</a>
+                        </h6>
+                      </div>
+                      <span class="kbl-social-wrapper">
+                        <a href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer noopener"
+                            class="kbl-icon-google align-middle">
+                          <i class="ai ai-google-scholar-square ai-lg"></i>
+                        </a>
+                        <a href="https://orcid.org/0000-0001-8683-1240" target="_blank" rel="noreferrer noopener" class="kbl-icon-orcid align-middle">
+                          <i class="ai ai-orcid-square ai-lg"></i>
+                        </a>
+                        <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-researchgate align-middle">
+                          <i class="ai ai-researchgate-square ai-lg"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle">
+                          <i class="fab fa-linkedin ai-lg"></i>
+                        </a>
+
+                      </span>
+                    </figcaption>
+                  </figure>
+                </div>
+              </article>
             </div>
             <div class="col-md d-none d-md-block">
                 <div class="education_timeline_wrap">
