--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -28,7 +28,7 @@
         <div class="row justify-content-center">
           <div class="col-sm-6">
             {% set pag2020 = {
-                link: '/event/pag2020',
+                link: '/events/pag2020',
                 title: 'Plant & Animal Genome Conference',
                 location: '500 Hotel Circle N, San Diego, CA',
                 date: 'Jan 11-15, 2020',
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col-sm-6">
             {% set pag = {
-                link: '/event/pag',
+                link: '/events/pag',
                 title: 'Plant & Animal Genome Conference',
                 location: '500 Hotel Circle N, San Diego, CA',
                 date: 'Jan 12-16, 2019',
@@ -55,7 +55,7 @@
           </div>
           <div class="col-sm-6">
             {% set psc = {
-                link: '/event/psc',
+                link: '/events/psc',
                 title: 'PSC Showcase',
                 location: '4820 Old Main Hill, Logan, UT',
                 date: 'Mar 23, 2019',
@@ -66,7 +66,7 @@
           </div>
           <div class="col-sm-6">
             {% set cricket = {
-                link: '/event/cricket',
+                link: '/events/cricket',
                 title: 'Cricket in Utah',
                 location: '6252 W 6200 S, Kearns, UT',
                 date: 'Jul 13, 2019',
@@ -77,7 +77,7 @@
           </div>
           <div class="col-sm-6">
             {% set winter = {
-                link: '/event/winter',
+                link: '/events/winter',
                 title: 'Utah State University Winter',
                 location: '4700 Old Main Hill, Logan, UT',
                 date: 'Dec 1, 2019',
@@ -93,7 +93,7 @@
         <div class="row">
           <div class="col-sm-6">
             {% set rocky = {
-                link: '/event/rocky',
+                link: '/events/rocky',
                 title: 'Rocky Bioinformatics Conference',
                 location: '130 Wood Road, Snowmass Village, CO',
                 date: 'Dec 5-7, 2018',
@@ -104,7 +104,7 @@
           </div>
           <div class="col-sm-6">
             {% set hsing = {
-                link: '/event/hsing',
+                link: '/events/hsing',
                 title: 'Visit to National Chung Hsing University',
                 location: '145 Xingda Road, S District, Taichung City, Taiwan',
                 date: 'Mar 2-9, 2018',
@@ -120,7 +120,7 @@
         <div class="row">
           <div class="col-sm-6">
             {% set osucup = {
-                link: '/event/osucup',
+                link: '/events/osucup',
                 title: 'Won President\'s Cup at OSU',
                 location: '246 Noble Research Center, Stillwater, OK',
                 date: 'Dec 10, 2013',
