--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -88,7 +88,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="sec-navigate-wrap pos-y_center ">
+                <div class="sec-navigate-wrap center-y">
                     <button type="button" class="seq-next"></button>
                     <button type="button" class="seq-prev"></button>
                 </div>
