Added enroll ID

--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -127,7 +127,7 @@
       </div>
     </section>
 
-    <section class="row mt-4">
+    <section class="row mt-4" id="enroll">
       <div class="col-5 text-center">
         {% include "./_contact-form.njk" %}
       </div>
