--- a/src/views/pages/admin/dev-env/dev-env.njk
+++ b/src/views/pages/admin/dev-env/dev-env.njk
@@ -45,7 +45,7 @@
           The <code>-g</code> flag installs this globally on your computer, which is why you'll need to run
           it with <code>sudo</code>. This allows you to use Nodemon and ts-node-dev on any application. Now your development
           environment is set up.<br><br> Time to start
-          <a href="help/run-local" class="kbl-link">editing the site</a>!
+          <a href="admin/run-local" class="kbl-link">editing the site</a>!
         </p>
       </div>
     </div>
