--- a/src/views/pages/admin/scm-setup/scm-setup.njk
+++ b/src/views/pages/admin/scm-setup/scm-setup.njk
@@ -31,7 +31,7 @@
           Now, that covers why we use Git, but we also use
           <a class="kbl-link" href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
           as well. GitHub hosts repositories so that we don't have to write our own Git server and manage it ourselves.
-          It's also free, and offers many other features as well that make running your own repository easier. We personally
+          It's also free, and offers many other features that make managing your own repository easier. We personally
           don't require many of these features, as our site is not big enough, but the hosting is very nice to have. Managing
           Git through a GUI is a plus, and we can see changes made to the site much more easily.
         </p>
@@ -43,7 +43,7 @@
           In the terminal, type in <code>cat ~/.ssh/id_rsa.pub</code><br>
           If you get an error, that just means you haven't created an RSA key yet. To create a key, type in
           <code>ssh-keygen -t rsa -C "your_email@example.com"</code><br>
-          Use the email you signed up to GitHub with. Just hit Enter through the prompts,
+          Use the email you signed up to GitHub with. Just hit <code>Enter</code> through the prompts,
           the defaults are okay.
         </p>
 
