--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -161,9 +161,21 @@
   }
 %}
 
-{% set staff = [roussie, cristian, naveen, nikhil, shelby] %}
+{% set raghav = {
+    name: "Raghav Kataria",
+    subtitle: "PhD Plant Science",
+    modifier: "Kataria",
+    type: "Graduate Student",
+    bio: "",
+    email: "raghav09@aggiemail.usu.edu",
+    img: "/image/raw/people/raghav/raghav.jpg",
+    social: []
+  }
+%}
+
+{% set staff = [roussie, naveen, nikhil, shelby] %}
 
 {% set bioinfoStaff = [roussie] %}
-{% set gradStudents = [cristian, naveen, nikhil] %}
+{% set gradStudents = [naveen, nikhil, raghav] %}
 {% set undergradStudents = [shelby] %}
-{% set alumni = [udarika, raul, caleb, matt, suyash, kaige] %}
+{% set alumni = [udarika, raul, caleb, matt, suyash, kaige, cristian] %}
