Change Raghav study

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -163,7 +163,7 @@
 
 {% set raghav = {
     name: "Raghav Kataria",
-    subtitle: "PhD Plant Science",
+    subtitle: "PhD Student | PSC",
     modifier: "Kataria",
     type: "Graduate Student",
     bio: "",
