Fix video img not stretching

--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -76,7 +76,7 @@
           <div class="h-100 gray-bg">
             <section class="mb-3">
               <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-toggle="modal" data-target="#videoModal">
-                <img src="assets/img/rs_usu_winter.jpg" alt="" class="img-fluid">
+                <img src="{{ RaikouServer }}/image/raw/bioinfo/rs_usu_winter.jpg?w=742&h=432" alt="" class="img-fluid">
               </a>
             </section>
             <div class="modal fade" id="videoModal" tabindex="-1">
