Fix typo in research

--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -66,7 +66,7 @@
                   <div class="col-md-6 col-sm-8">
                       <aside class="stage-halfbol_content">
                           <h2 class="stage-title font-md lil-line">KAABiL group is one of Utah’s</h2>
-                          <p class="stage-halfbol_text">leading bioinformatics lab. To date, Dr. Kaundal has trained more than 10 graduate and 10 undergrad
+                          <p class="stage-halfbol_text">leading bioinformatics labs. To date, Dr. Kaundal has trained more than 10 graduate students, 10 undergrad
                           students, 1 postdoctoral fellow, and 3 full-time bioinformatics staff members in his career research program.</p>
                           <a href="/contact#enroll" class="btn kbl-btn-1-solid">Join Research</a>
                       </aside>
