Remove Nikhil from grad students

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -173,9 +173,9 @@
   }
 %}
 
-{% set staff = [roussie, naveen, nikhil, shelby] %}
+{% set staff = [naveen, shelby, raghav, roussie] %}
 
 {% set bioinfoStaff = [roussie] %}
-{% set gradStudents = [naveen, nikhil, raghav] %}
+{% set gradStudents = [naveen, raghav] %}
 {% set undergradStudents = [shelby] %}
-{% set alumni = [udarika, raul, caleb, matt, suyash, kaige, cristian] %}
+{% set alumni = [caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
